# TicTacToe

./: CMakeLists.txt  LICENSE  LibMetadata.hpp  Main.qml  PRIVACY.md  README.md  qmldir
QmlExtras/: CMakeLists.txt  Display.qml
ResultChecker/: CMakeLists.txt  ResultChecker.cpp  ResultChecker.hpp  ResultCheckerConfig.cmake
TicTacToe/: .qmllint.ini  CMakeLists.txt  Main.qml  ResultMgr.cpp  ResultMgr.hpp  main.cpp
TicTacToe/android/: AndroidManifest.xml
TicTacToe/content/: ApplicationState.qml  CalculatorButton.qml  Display.qml  NumberPad.qml
TicTacToe/ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
calqlatr/: CMakeLists.txt  Main.qml  ResultChecker.cpp  ResultChecker.hpp  ResultMgr.cpp  ResultMgr.hpp  calqlatr.qrc  main.cpp
calqlatr/content/: ApplicationState.qml  BackspaceButton.qml  CalculatorButton.qml  Display.qml  NumberPad.qml  PlayButton.qml  calculator.js
content/: BackspaceButton.qml  Display.qml  calculator.js
doc/src/: calqlatr.qdoc
